# keylogger

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_cli.py  run_keylogger.py  setup.py
deployment/linux/: install_linux.sh  system-monitoring@.service
deployment/macos/: com.system.monitoring.plist  install_macos.sh
deployment/windows/: SystemMonitoring.xml  build_windows.bat  install_windows_enhanced.bat  keylogger.spec
examples/: demo_log_rotation.py  demo_window_logging.py
src/: __init__.py  keylogger.py  keylogger_cli.py  klog  log_utils.py
tests/: conftest.py  test_autostart.py  test_cli.py  test_encryption.py  test_log_rotation.py  test_silent.py  test_window_titles.py
